--- a/ChefMate/Chefmate.UI/Views/SummaryView.xaml
+++ b/ChefMate/Chefmate.UI/Views/SummaryView.xaml
@@ -2,6 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Width="{Binding WindowWidth}" WindowStyle="None" WindowState="Maximized" ResizeMode="NoResize"
         xmlns:local="clr-namespace:Chefmate.UI.Views"
+        xmlns:fontSize="clr-namespace:Chefmate.UI.Views"
+        xmlns:fontFamily="clr-namespace:Chefmate.UI.Views"
+        xmlns:backGroundColor="clr-namespace:Chefmate.UI.Views"
+       
     
 
     BorderThickness="3" BorderBrush="Gray" WindowStartupLocation="CenterScreen" Icon="../Images/C_Transparent.ico" FontFamily="Tahoma">
@@ -9,9 +13,12 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Themes/MenumateTheme.xaml"/>                
+                <ResourceDictionary Source="../Themes/MenumateTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <local:PercentageConverter x:Key="percentageConverter" />            
+            <local:PercentageConverter x:Key="percentageConverter" />
+            <fontSize:FontSizeConverter x:Key="fontSizeConverter" />
+            <fontFamily:FontFamilyConverter x:Key="fontFamilyConverter" />
+            <backGroundColor:BackGroundColorConverter x:Key="backGroundColorConverter" />
         </ResourceDictionary>
     </Window.Resources>
 
@@ -29,7 +36,6 @@
                    FontSize="{Binding GuiStyles.AnalysisFontSize}" FontFamily="{Binding GuiStyles.AnalysisFontFamily}" FontWeight="{Binding GuiStyles.AnalysisFontWeight}"/>
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch">
-            <!--<Grid Grid.Column="1" HorizontalAlignment="Stretch">-->
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width=".20*"/>
                 <ColumnDefinition Width=".15*"/>
@@ -52,7 +58,7 @@
                         Name="ForwardNavigationButton">
                 <Path Data="M 0 0 L 0 40 L 40 20 Z"/>
             </Button>
-            <Button Style="{StaticResource NavigationButtonStyle}" Grid.Column="4" Command="{Binding NavigateRightCommand}"  
+            <Button Style="{StaticResource NavigationButtonStyle}" Grid.Column="4" Command="{Binding NavigateRightCommand}"
                         Name="RightNavigationButton">
                 <Path Data="M 0 0 L 0 40 L 35 20 L 35 40 L 40 40 L 40 0 L 35 0 L 35 20 Z"/>
             </Button>
@@ -61,9 +67,8 @@
         </Grid>
 
         <Grid Grid.Row="1" Grid.ColumnSpan="2">
-            
-                <ListBox x:Name="ItemSummaryList"  ScrollViewer.HorizontalScrollBarVisibility="Hidden">
 
+            <ListBox x:Name="ItemSummaryList"  ScrollViewer.HorizontalScrollBarVisibility="Hidden" >
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel Orientation="Vertical"  Height="{Binding Converter={StaticResource   percentageConverter}, ElementName=ItemSummaryList, Path=ActualHeight, ConverterParameter=.99}">
@@ -72,53 +77,23 @@
                 </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
                     <DataTemplate >
-                     
-                            <StackPanel Name="S1" Orientation="Vertical" Width="{Binding Converter={StaticResource   percentageConverter}, ElementName=ItemSummaryList, Path=ActualWidth, ConverterParameter=0.5}">
+                        <StackPanel Name="S1" Orientation="Vertical" Width="{Binding Converter={StaticResource   percentageConverter}, ElementName=ItemSummaryList, Path=ActualWidth, ConverterParameter=0.5}">
                             <Border CornerRadius="1" BorderThickness="2" BorderBrush="#C4D3C4" Background="#C4D3C4" Margin="2">
-                                <Label FontSize="34" Content="{Binding Path=DataContext, RelativeSource={RelativeSource Self}}" VerticalAlignment="Center">
+                                <Label  FontSize="{Binding Converter={StaticResource   fontSizeConverter}, ElementName=ItemSummaryList}"  
+                                        FontFamily="{Binding Converter={StaticResource   fontFamilyConverter}, ElementName=ItemSummaryList}"
+                                        Background="{Binding Converter={StaticResource   backGroundColorConverter}, ElementName=ItemSummaryList}"
+                                        Content="{Binding Path=DataContext, RelativeSource={RelativeSource Self}}" VerticalAlignment="Center">
                                 </Label>
+                                <!--<Label  FontSize="{Binding GuiStyles.ItemSummaryFontSize}" 
+                                    FontFamily="{Binding GuiStyles.ItemSummaryFontFamily}"                                     
+                                    Background="{Binding GuiStyles.ItemSummaryBackGround}" 
+                                    Content="{Binding Path=DataContext, RelativeSource={RelativeSource Self}}" VerticalAlignment="Center">
+                                </Label>-->
                             </Border>
-                            </StackPanel>
-                    
+                        </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            
-            <!--<DataGrid Height="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=ActualHeight}"
-                          Width= "500" HorizontalAlignment="Left" Margin="12,21,0,0" 
-                Name="McDataGrid" VerticalAlignment="Top" RowHeight="30" ColumnWidth="100" 
-                  ColumnHeaderHeight="50" HeadersVisibility="Column"
-                  Background="LightGray"  BorderBrush="Gray" BorderThickness="5" AutoGenerateColumns="False" FrozenColumnCount="1">
-
-                
-                    <DataGrid.Columns>
-                        <DataGridTextColumn 
-                            Header="Item List"
-                            Width="800"
-                            MinWidth="800"
-                            FontSize="24"   
-                            Binding="{Binding Path=DataContext, RelativeSource={RelativeSource Self}}" >
-                            <DataGridTextColumn.ElementStyle>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="TextWrapping" Value="Wrap"/>
-                                    <Setter Property="FontSize" Value="20" />
-                                    <Setter Property="Background" Value="#F6C4C4"></Setter>
-                                    <Setter Property="Foreground" Value="Black"></Setter>
-                                </Style>
-                            </DataGridTextColumn.ElementStyle>
-                        </DataGridTextColumn>
-
-                    </DataGrid.Columns>
-                </DataGrid>-->
-
         </Grid>
-        <!--</ScrollViewer>-->
-
-        <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource FormLabel}" Foreground="Red" Content="{Binding StatusText}"></Label>
-        <!--<StackPanel Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button Margin="5" Command="{Binding AutoUpdateCommand}">Update UI</Button>
-            <Button Margin="5" Command="{Binding CloseCommand}">Close</Button>
-        </StackPanel>-->
     </Grid>
-
 </Window>
