--- a/ChefMate/Chefmate.UI/Views/SummaryView.xaml
+++ b/ChefMate/Chefmate.UI/Views/SummaryView.xaml
@@ -44,7 +44,7 @@
                 <ColumnDefinition Width=".15*"/>
                 <ColumnDefinition Width=".20*"/>
             </Grid.ColumnDefinitions>
-            <Button Style="{StaticResource FunctionButtonStyle}"  Command="{Binding AutoUpdateCommand}" Grid.Column="0" Content="Update UI" Background="{Binding GuiStyles.HeaderBackGround}" 
+            <Button Style="{StaticResource FunctionButtonStyle}"  Command="{Binding AutoUpdateCommand}" Grid.Column="0" Content="Refresh" Background="{Binding GuiStyles.HeaderBackGround}" 
                     FontSize="{Binding GuiStyles.AnalysisFontSize}" FontFamily="{Binding GuiStyles.AnalysisFontFamily}" FontWeight="{Binding GuiStyles.AnalysisFontWeight}"/>
             <Button Style="{StaticResource NavigationButtonStyle}" Grid.Column="1" Command="{Binding NavigateLeftCommand}"
                         Name="LeftNavigationButton">
@@ -63,7 +63,9 @@
                 <Path Data="M 0 0 L 0 40 L 35 20 L 35 40 L 40 40 L 40 0 L 35 0 L 35 20 Z"/>
             </Button>
             <Button Style="{StaticResource FunctionButtonStyle}" Grid.Column="5" Background="{Binding GuiStyles.HeaderBackGround}"  Command="{Binding CloseCommand}"
-                    FontSize="{Binding GuiStyles.AnalysisFontSize}" FontFamily="{Binding GuiStyles.AnalysisFontFamily}" FontWeight="{Binding GuiStyles.AnalysisFontWeight}">Close</Button>
+                    FontSize="{Binding GuiStyles.AnalysisFontSize}" FontFamily="{Binding GuiStyles.AnalysisFontFamily}" FontWeight="{Binding GuiStyles.AnalysisFontWeight}">
+                <TextBlock  TextAlignment="Center" TextWrapping="Wrap">Orders View</TextBlock>
+            </Button>
         </Grid>
 
         <Grid Grid.Row="1" Grid.ColumnSpan="2">
