--- a/ChefMate/Chefmate.UI/Views/SummaryView.xaml
+++ b/ChefMate/Chefmate.UI/Views/SummaryView.xaml
@@ -44,8 +44,11 @@
                 <ColumnDefinition Width=".15*"/>
                 <ColumnDefinition Width=".20*"/>
             </Grid.ColumnDefinitions>
-            <Button Style="{StaticResource FunctionButtonStyle}"  Command="{Binding AutoUpdateCommand}" Grid.Column="0" Content="Refresh" Background="{Binding GuiStyles.HeaderBackGround}" 
-                    FontSize="{Binding GuiStyles.AnalysisFontSize}" FontFamily="{Binding GuiStyles.AnalysisFontFamily}" FontWeight="{Binding GuiStyles.AnalysisFontWeight}"/>
+
+            <Button Style="{StaticResource FunctionButtonStyle}" Grid.Column="0" Background="{Binding GuiStyles.HeaderBackGround}"  Command="{Binding CloseCommand}"
+                    FontSize="{Binding GuiStyles.AnalysisFontSize}" FontFamily="{Binding GuiStyles.AnalysisFontFamily}" FontWeight="{Binding GuiStyles.AnalysisFontWeight}">
+                <TextBlock  TextAlignment="Center" TextWrapping="Wrap">Orders View</TextBlock>
+            </Button>
             <Button Style="{StaticResource NavigationButtonStyle}" Grid.Column="1" Command="{Binding NavigateLeftCommand}"
                         Name="LeftNavigationButton">
                 <Path Data="M 0 0 L 0 40 L5 40 L 5 20 L 40 40 L 40 0 L 5 20 L 5 0  Z"/>
@@ -61,10 +64,9 @@
             <Button Style="{StaticResource NavigationButtonStyle}" Grid.Column="4" Command="{Binding NavigateRightCommand}"
                         Name="RightNavigationButton">
                 <Path Data="M 0 0 L 0 40 L 35 20 L 35 40 L 40 40 L 40 0 L 35 0 L 35 20 Z"/>
-            </Button>
-            <Button Style="{StaticResource FunctionButtonStyle}" Grid.Column="5" Background="{Binding GuiStyles.HeaderBackGround}"  Command="{Binding CloseCommand}"
+            </Button>            
+            <Button Style="{StaticResource FunctionButtonStyle}"  Command="{Binding AutoUpdateCommand}" Grid.Column="5" Content="Refresh" Background="{Binding GuiStyles.HeaderBackGround}" 
                     FontSize="{Binding GuiStyles.AnalysisFontSize}" FontFamily="{Binding GuiStyles.AnalysisFontFamily}" FontWeight="{Binding GuiStyles.AnalysisFontWeight}">
-                <TextBlock  TextAlignment="Center" TextWrapping="Wrap">Orders View</TextBlock>
             </Button>
         </Grid>
 
